<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gmcpvrhp.remotefinalnew.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/bckg2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/kButton_String"
            android:id="@+id/FutureUseButtonC"
            android:background="@drawable/round_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpButton_String"
            android:id="@+id/UpButton"
            android:layout_marginLeft="350dp"
            android:background="@drawable/round_button"
            />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/LeftButton_String"
            android:id="@+id/LeftButton"
            android:background="@drawable/round_button"
            />

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/RightButton_String"
            android:id="@+id/RightButton"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_button"
            />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DownButton_String"
        android:id="@+id/DownButton"
        android:layout_marginLeft="412dp"
        android:background="@drawable/round_button"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/gButton_String"
            android:id="@+id/FutureUseButtonA"
            android:layout_marginLeft="80dp"
            android:background="@drawable/round_button"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BreakButton_String"
            android:layout_marginLeft="20dp"
            android:id="@+id/BreakButton"
            android:background="@drawable/round_button"
           />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/jButton_String"
            android:id="@+id/FutureUseButtonB"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_button"
           />



    </LinearLayout>

</LinearLayout>
